# calc

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  controller.cc  controller.hh  main.cpp  model.cc  model.hh  view.cc  view.hh
ui/: ui.slint
